@@ -13,9 +13,9 @@ __email__ = "pm67nz@gmail.com"
 __status__ = "Production"
 
 # Check Python version, no point installing if unsupported version inplace
-if sys.version_info < (2, 5):
+if sys.version_info < (2, 6):
     py_version = ".".join([str(n) for n in sys.version_info])
-    raise RuntimeError("Python-2.5 or 2.6 is required, Python-%s used." % py_version)
+    raise RuntimeError("Python-2.6 or greater is required, Python-%s used." % py_version)
 
 
 # Check Numpy version, no point installing if unsupported version inplace
